data/derived/comb/progs/unify/prog0582.ml.out
Characters 12-15:
  let _ = acos(0);;
              ^^^
Error: This expression has type int but an expression was expected of type
         float
